# walmart_case

./: .gitignore  README.md  pyproject.toml  walmart.ipynb
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: orchestrate.py
walmart_proj/: .user.yml  dbt_project.yml
walmart_proj/analyses/: test.sql
walmart_proj/macros/: schema.sql
walmart_proj/models/gold/: dim_customers.sql  dim_employees.sql  dim_products.sql  dim_stores.sql  eph_orders.sql  fact_order_items.sql  properties.yml
walmart_proj/models/silver_b/: obt_b.sql
walmart_proj/models/silver_t/: customers_t.sql  orders_t.sql  properties.yml
walmart_proj/models/source/: sources.yml
walmart_proj/snapshots/: dim_customers_snapshot.yml  dim_employees_snapshot.yml  dim_products_snapshot.yml  dim_stores_snapshot.yml
walmart_proj/tests/: assert_employees_unique.sql
